# Pascal-interpreter

./: CMakeLists.txt  LICENSE  README.md
examples/: arithmetic.pas  for_loop.pas  while_loop.pas
include/: exceptions.h  hash_table.h  linked_list.h  list.h  pascal_parser.h  stack.h  table.h  value.h
sample/: CMakeLists.txt  error.pas  example.pas  if_conditional.pas  sample.cpp
sources/: exceptions.cpp  value.cpp
sources/parser/: CMakeLists.txt  pascal_parser.cpp  visitor.cpp  visitor.h
sources/parser/grammar/: PascalLexer.g4  PascalParser.g4
tests/: tests_list.cpp  tests_stack.cpp
